--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -13,7 +13,7 @@
         <nav>
             <ul class="nav justify-content-end">
                 <li class="nav-item">
-                  <a class="nav-link " href="../index.html">Inicio</a>
+                  <a class="nav-link active" href="../index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="../paginas/nosotros.html">Nosotros</a>
